make sure that scrollbar dissapeers on mobile menu

--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -49,5 +49,7 @@
 .cc-navbar{
   padding-top: 2rem;
 }
-
+.body-fixed{
+  position:fixed;
+}
 }
